login-web-app/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wl-login-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - "login.lnxadm.xyz"
    secretName: nk-tls-secret
  rules:
  - host: login.lnxadm.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: login-svc
              port: 
                number: 80
